fix readability problem

--- a/assets/css/mvp.scss
+++ b/assets/css/mvp.scss
@@ -491,6 +491,7 @@ header {
   flex-direction: column; 
   justify-content: flex-end;
   display: flex;
+  color: Gainsboro;
 
   a {
     color: Gainsboro;
